All pages have functional CSS. Roles need to be added.

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -27,9 +27,32 @@
     <body>
         
         <div id="page_container">
-
+            <img style="position: absolute;
+                    width: 250px;
+                    height: 200px;
+                    left: 62px;
+                    top: 10px;"
+                src="images/logo.jpeg" ... />
+            <img style="position: absolute;
+                            width: 340px;
+                            height: 30px;
+                            left: 25px;
+                            top: 200px;"
+                src="images/dots.jpeg" ... />
             <div class="browse">
-                <h3>Browse Teams</h3>
+                <h3 style="position: absolute;
+                    left: 31%;
+                    right: 10.4%;
+                    top: 38.33%;
+                    bottom: 55.92%;
+
+                    font-family: 'Sniglet Bold', arial;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 18px;
+                    line-height: 28px;
+
+                    color: #000000;">Pick Your Teams</h3>
             </div>
 
             <!-- data uploaded from 'add_index' and psuedo classes added
@@ -40,7 +63,13 @@
                 -->
                     
                 <input type="submit" id="submitBtn done" class="btn btn-default" 
-			        onclick="finishSignUp();" value="Complete">
+			        onclick="finishSignUp();" value="" style="position: absolute;
+                       width: 70px;
+                       height: 40px;
+                       left: 270px;
+                       top: 570px;
+
+                       background: url(../images/nextArrow.jpeg);">
         </div>
 
     </body>
