--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -23,34 +23,182 @@
     <body>
 
         <div class="page_container">
-            <h1 style="text-align: center">Create Team</h1>
-            <br><h2 style="text-align: center">or Join</h2>
-
+            <img style="position: absolute;
+                    width: 250px;
+                    height: 200px;
+                    left: 62px;
+                    top: 10px;"
+                src="../images/logo.jpeg" ... />
+            <img style="position: absolute;
+                            width: 340px;
+                            height: 30px;
+                            left: 25px;
+                            top: 200px;"
+                src="../images/dots.jpeg" ... />
             <div id="user_info">
                 <form id="name_invites">
-                    <input type="text" id="username" placeholder="username">
-                    <input type="text" id="password" placeholder="password">
-                    <hr>
+                    <h4 style="position: absolute;
+                    left: 14%;
+                    right: 10.4%;
+                    top: 38.33%;
+                    bottom: 55.92%;
 
-                    <input type="submit" id="submitBtn" class="btn btn-default"
-                        value="Next">
+                    font-family: 'Sniglet Bold', arial;
+                    font-style: italic;
+                    font-weight: bold;
+                    font-size: 19px;
+                    line-height: 22px;
+
+                    color: #000000;"> Create a User Name and Password...</h4>
+                    <h5 style="position: absolute;
+                    left: 14%;
+                    right: 58.4%;
+                    top: 53.33%;
+                    bottom: 55.92%;
+
+                    font-family: 'Sniglet Bold', arial;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 22px;
+
+                    color: #000000;">User Name</h5>
+                    <input type="text" id="username" placeholder="username" style="position: absolute;
+                       width: 288px;
+                       height: 36px;
+                       left: 55px;
+                       top: 370px;
+
+                       background: #D4F5E9;
+                       border: 1px solid #707070;
+                       box-sizing: border-box;">
+                    <h5 style="position: absolute;
+                    left: 14%;
+                    right: 58.4%;
+                    top: 66.33%;
+                    bottom: 55.92%;
+
+                    font-family: 'Sniglet Bold', arial;
+                    font-style: normal;
+                    font-weight: normal;
+                    font-size: 16px;
+                    line-height: 22px;
+
+                    color: #000000;">Password</h5>
+                    <input type="text" id="password" placeholder="password" style="position: absolute;
+                       width: 288px;
+                       height: 36px;
+                       left: 55px;
+                       top: 450px;
+
+                       background: #D4F5E9;
+                       border: 1px solid #707070;
+                       box-sizing: border-box;">
+
+                    <input type="submit" id="submitBtn" class="btn btn-default" value="" style="position: absolute;
+                       width: 70px;
+                       height: 40px;
+                       left: 270px;
+                       top: 570px;
+
+                       background: url(../images/nextArrow.jpeg);">
 			    </form>
             </div>
 
             <div class="hide" id="trait_input">
 
                 <div id="p_site">
-                    <a href="https://openpsychometrics.org/tests/OEJTS/">Take your personality test here!</a>
+                    <h5 style="position: absolute;
+                    left: 14%;
+                    right: 10.4%;
+                    top: 38.33%;
+                    bottom: 55.92%;
+
+                    font-family: 'Sniglet Bold', arial;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 18px;
+                    line-height: 28px;
+
+                    color: #000000;">Step 1: Take a quick personality test </h5>
+                    <a href="https://www.16personalities.com/free-personality-test" style="position: absolute;
+                     left: 35.13%;
+                     right: 8.53%;
+                     top: 48.44%;
+                     bottom: 71.81%;
+
+                     font-family: Roboto;
+                     font-style: normal;
+                     font-weight: normal;
+                     font-size: 20px;
+                     line-height: 28px;
+                     text-decoration-line: underline;
+
+                     color: #0A47A2;">Click On Me!</a>
                 </div>
 
                 <form id="lc">
-                    <input type="text" id="1_letter" placeholder="I">
-                    <input type="text" id="2_letter" placeholder="N">
-                    <input type="text" id="3_letter" placeholder="T">
-                    <input type="text" id="4_letter" placeholder="J">
-                    <hr>
+                    <h5 style="position: absolute;
+                    left: 14%;
+                    right: 10.4%;
+                    top: 58.33%;
+                    bottom: 55.92%;
+
+                    font-family: 'Sniglet Bold', arial;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 18px;
+                    line-height: 28px;
+
+                    color: #000000;">Step 2: Type the four letters of your personality type </h5>
+
+                    <input type="text" id="1_letter" placeholder="ex. A" style="position: absolute;
+                       width: 50px;
+                       padding-right: 10px;
+                       height: 36px;
+                       left: 55px;
+                       top: 450px;
+
+                       background: #D4F5E9;
+                       border: 1px solid #707070;
+                       box-sizing: border-box;">
+                    <input type="text" id="2_letter" placeholder="ex. A" style="position: absolute;
+                       width: 50px;
+                       padding-right: 10px;
+                       height: 36px;
+                       left: 125px;
+                       top: 450px;
+
+                       background: #D4F5E9;
+                       border: 1px solid #707070;
+                       box-sizing: border-box;">
+                    <input type="text" id="3_letter" placeholder="ex. A" style="position: absolute;
+                       width: 50px;
+                       padding-right: 10px;               
+                       height: 36px;
+                       left: 195px;
+                       top: 450px;
+
+                       background: #D4F5E9;
+                       border: 1px solid #707070;
+                       box-sizing: border-box;">
+                    <input type="text" id="4_letter" placeholder="ex. A" style="position: absolute;
+                       width: 50px;
+                       height: 36px;
+                       left: 265px;
+                       top: 450px;
+
+                       background: #D4F5E9;
+                       border: 1px solid #707070;
+                       box-sizing: border-box;">
                     <input type="submit" id="submitBtn lc_4" class="btn btn-default"
-                        value="Continue">
+                        value="" style="position: absolute;
+                       width: 70px;
+                       height: 40px;
+                       left: 270px;
+                       top: 570px;
+
+                       background: url(../images/nextArrow.jpeg);">
 			    </form>
                 
             </div>
