--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -20,7 +20,13 @@
             </div>
                     
                 <input type="submit" id="sumitBtn done" class="btn btn-default" 
-			    onclick="history.go(-1); wipe();" value="Done">
+			    onclick="history.go(-1); wipe();" value="Save" style="position: absolute;
+                                       width: 86px;
+                                       height: 35px;
+                                       left: 130px;
+                                       top: 570px;background: #BADFFF;
+                                       border: 1px solid #0A47A2;
+                                       box-sizing: border-box;">
         </div>
 
     </body>
