--- a/views/selection.handlebars
+++ b/views/selection.handlebars
@@ -23,6 +23,18 @@
     <body>
         
         <div id="page_container">
+            <img style="position: absolute;
+                    width: 250px;
+                    height: 200px;
+                    left: 62px;
+                    top: 10px;"
+                src="../../../images/logo.jpeg" ... />
+            <img style="position: absolute;
+                            width: 340px;
+                            height: 30px;
+                            left: 25px;
+                            top: 200px;"
+                src="../../../images/dots.jpeg" ... />            
             <div class="user">
                 <!-- data uploaded from 'current'
                 'current' in div class=trait
@@ -41,7 +53,13 @@
                 -->
                     
                 <input type="submit" id="submitBtn done" class="btn btn-default" 
-			        onclick="goBrowse();" value="Next">
+			        onclick="goBrowse();" value="" style="position: absolute;
+                       width: 70px;
+                       height: 40px;
+                       left: 270px;
+                       top: 570px;
+
+                       background: url(../../../images/nextArrow.jpeg);">
         </div>
 
     </body>
