--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -16,14 +16,39 @@
     <body>
 
         <div id="page_container">
-            <div style="text-align:right">
-                <input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = '/';" value="Log Out"></input>
-                <input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = '../help';" value="Help"></input>
+            <img style="position: absolute;
+                    width: 250px;
+                    height: 200px;
+                    left: 62px;
+                    top: 10px;"
+                src="../images/logo.jpeg" ... />
+            <img style="position: absolute;
+                            width: 340px;
+                            height: 30px;
+                            left: 25px;
+                            top: 200px;"
+                src="../images/dots.jpeg" ... />
+            <div>
+                <input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = '/';" value="Log Out" style="position: absolute;
+                                       width: 86px;
+                                       height: 35px;
+                                       left: 311px;
+                                       top: 7px;background: #BADFFF;
+                                       border: 1px solid #0A47A2;
+                                       box-sizing: border-box;"></input>
             </div>
-            <div class="jumbotron" style="text-align:center">
-                <h1>My Groups</h1>
-            </div>
+                <h1 style="position: absolute;
+                       left: 20.2%;
+                       right: 20.53%;
+                       top: 33.9%;
+                       bottom: 86.36%;
 
+                       font-style: normal;
+                       font-weight: normal;
+                       font-size: 46px;
+                       line-height: 64px;
+
+                       color: #000000;">My Groups</h1>
             <div class="container" id="red_box">
             </div>
 
@@ -34,6 +59,12 @@
                     -->
             </div>
         </div>
+        <img style="position: absolute;
+                        width: 340px;
+                        height: 30px;
+                        left: 19px;
+                        top: 560px;"
+              src="../images/dots.jpeg" ... />        
 
     </body>
     <script src="../js/users.js"></script>
