--- a/public/css/index.css
+++ b/public/css/index.css
@@ -16,6 +16,15 @@
     width:180px; 
     height:160px; 
 }*/
+
+.home{
+    position: absolute;
+    width: 50px;
+    height: 47px;
+    left: 345px;
+    top: 2px;
+}
+
 .log_sign{
     width: 100%; 
     height: 35px; 
@@ -69,11 +78,19 @@
     padding-left: 25px;
     padding-right: 25px;
 }
-#teams{
-    padding:15px;
-    border: black 5px;
-}
+
 #no_projects{
     background-color: rgba(85, 85, 85, 0.411);
     text-align: center;
+}
+#example{
+    position: absolute;
+    width: 169px;
+    height: 36px;
+    left: 104px;
+    top: 490px;
+
+    background: #50A8B4;
+    border: 1px solid #0A47A2;
+    box-sizing: border-box;    
 }
