Sign up back button not working

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -58,6 +58,13 @@
 				src="images/dots.jpeg" ... />
 		<div class="container hide" id="hide_me_log">
 			<form method="POST" action="" id="logBtn">
+				<input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = '/';" value="Back" style="position: absolute;
+                                       width: 86px;
+                                       height: 35px;
+                                       left: 20px;
+                                       top: 230px;background: #BADFFF;
+                                       border: 1px solid #0A47A2;
+                                       box-sizing: border-box;"></input>
 				<h5 style="position: absolute;
 					left: 9%;
 					right: 58.4%;
@@ -117,6 +124,13 @@
 
 		<div class="container hide" id="hide_me_sign">
 			<form method="POST" action="" id="signBtn">
+				<input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = 'history.back(-1)';" value="Back" style="position: absolute;
+                                       width: 86px;
+                                       height: 35px;
+                                       left: 20px;
+                                       top: 230px;background: #BADFFF;
+                                       border: 1px solid #0A47A2;
+                                       box-sizing: border-box;"></input>				
 				<h5 style="position: absolute;
 					left: 12%;
 					right: 49.87%;
