Changed some wording

--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -44,12 +44,12 @@
                     bottom: 55.92%;
 
                     font-family: 'Sniglet Bold', arial;
-                    font-style: italic;
+                    font-style: normal;
                     font-weight: bold;
                     font-size: 19px;
                     line-height: 22px;
 
-                    color: #000000;"> Create a User Name and Password...</h4>
+                    color: #000000;"> Create a User Name and Password</h4>
                     <h5 style="position: absolute;
                     left: 14%;
                     right: 58.4%;
