--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -34,7 +34,7 @@
 											 left: 104px;
 											 top: 270px;
 
-											 background: #50A8B4;
+											 background: #BADFFF;
 											 border: 1px solid #0A47A2;
 											 box-sizing: border-box;">Log In</button>
 			</div>
@@ -45,7 +45,7 @@
 											 left: 104px;
 											 top: 400px;
 
-											 background: #50A8B4;
+											 background: #BADFFF;
 											 border: 1px solid #0A47A2;
 											 box-sizing: border-box;">Sign Up</button>
 			</div>
@@ -115,7 +115,7 @@
 					   left: 104px;
 					   top: 490px;
 
-					   background: #50A8B4;
+					   background: #BADFFF;
 					   border: 1px solid #0A47A2;
 					   box-sizing: border-box;">
 			</form>
@@ -159,7 +159,7 @@
 					   left: 104px;
 					   top: 390px;
 
-					   background: #50A8B4;
+					   background: #BADFFF;
 					   border: 1px solid #0A47A2;
 					   box-sizing: border-box;">
 			</form>
