EVERYTHING WORKSgit add -Agit add -A WE ARE DONEgit add -Agit add -A!

--- a/views/edit.handlebars
+++ b/views/edit.handlebars
@@ -16,6 +16,18 @@
     <body>
         
         <div id="page_container">
+            <img style="position: absolute;
+                    width: 250px;
+                    height: 200px;
+                    left: 62px;
+                    top: 10px;"
+                src="../../../../images/logo.jpeg" ... />
+            <img style="position: absolute;
+                            width: 340px;
+                            height: 30px;
+                            left: 25px;
+                            top: 200px;"
+                src="../../../../images/dots.jpeg" ... />          
             <div class="user">
             </div>
                     
