add groups button added. Need to modify array.

--- a/views/user.handlebars
+++ b/views/user.handlebars
@@ -36,6 +36,15 @@
                                        top: 7px;background: #BADFFF;
                                        border: 1px solid #0A47A2;
                                        box-sizing: border-box;"></input>
+                <input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = '/browse';" value="Add Groups" style="position: absolute;
+                                       width: 86px;
+                                       height: 35px;
+                                       left: 150px;
+                                       top: 575px;
+                                       padding-left: 5px;
+                                       background: #BADFFF;
+                                       border: 1px solid #0A47A2;
+                                       box-sizing: border-box;"></input>                                       
             </div>
                 <h1 style="position: absolute;
                        left: 20.2%;
@@ -63,7 +72,7 @@
                         width: 340px;
                         height: 30px;
                         left: 19px;
-                        top: 560px;"
+                        top: 540px;"
               src="../images/dots.jpeg" ... />        
 
     </body>
