--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,3 +1,4 @@
+@media only screen and (max-width: 400px){
 .container { 
     width: 100%;
     max-width: 750px;
@@ -5,18 +6,6 @@
     padding: 50px 10px;
     text-align: center;
 } 
-/*.container:before,
-.container:after {
-    content:"";
-    display:table;
-    clear: both;
-}
-.container div{
-    float:left; 
-    width:180px; 
-    height:160px; 
-}*/
-
 .home{
     position: absolute;
     width: 50px;
@@ -93,4 +82,5 @@
     background: #50A8B4;
     border: 1px solid #0A47A2;
     box-sizing: border-box;    
+}
 }
