--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 400px){
+@media only screen and (min-width: 400px; min-height: 620px){
 .container { 
     width: 100%;
     max-width: 750px;
