Hopefully this fits iPhone8

--- a/views/browse.handlebars
+++ b/views/browse.handlebars
@@ -4,7 +4,7 @@
     <head>
         <title>Type Page</title>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0">
         <link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
         <link href="/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
         <link href="/css/index.css" rel="stylesheet" type="text/css">
@@ -25,7 +25,9 @@
 
     </head>
     <body>
-        
+        <style>
+            @media only screen and (min-width: 400px; min-height: 620px){}
+        </style>
         <div id="page_container">
             <img style="position: absolute;
                     width: 250px;
@@ -71,7 +73,6 @@
 
                        background: url(../images/nextArrow.jpeg);">
         </div>
-
     </body>
     <!-- allow the body to load with teams div and content
 
