--- a/views/creation.handlebars
+++ b/views/creation.handlebars
@@ -51,9 +51,9 @@
 
                     color: #000000;"> Create a User Name and Password</h4>
                     <h5 style="position: absolute;
-                    left: 14%;
+                    left: 15%;
                     right: 58.4%;
-                    top: 53.33%;
+                    top: 50.33%;
                     bottom: 55.92%;
 
                     font-family: 'Sniglet Bold', arial;
@@ -73,9 +73,9 @@
                        border: 1px solid #707070;
                        box-sizing: border-box;">
                     <h5 style="position: absolute;
-                    left: 14%;
+                    left: 15%;
                     right: 58.4%;
-                    top: 66.33%;
+                    top: 62.33%;
                     bottom: 55.92%;
 
                     font-family: 'Sniglet Bold', arial;
@@ -121,11 +121,11 @@
                     line-height: 28px;
 
                     color: #000000;">Step 1: Take a quick personality test </h5>
-                    <button id="OpenTest" onclick="OpenTest()" style="position: absolute;
+                    <button class="btn btn-default" id="OpenTest" onclick="OpenTest()" style="position: absolute;
                       width: 86px;
                       height: 35px;
                       left: 130px;
-                      top: 300px;
+                      top: 330px;
                       background: #BADFFF;
                       border: 1px solid #0A47A2;
                       box-sizing: border-box;">Take Test!</button>
@@ -156,7 +156,7 @@
                        padding-right: 10px;
                        height: 36px;
                        left: 55px;
-                       top: 450px;
+                       top: 470px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
@@ -166,7 +166,7 @@
                        padding-right: 10px;
                        height: 36px;
                        left: 125px;
-                       top: 450px;
+                       top: 470px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
@@ -176,7 +176,7 @@
                        padding-right: 10px;               
                        height: 36px;
                        left: 195px;
-                       top: 450px;
+                       top: 470px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
@@ -185,7 +185,7 @@
                        width: 50px;
                        height: 36px;
                        left: 265px;
-                       top: 450px;
+                       top: 470px;
 
                        background: #D4F5E9;
                        border: 1px solid #707070;
