--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,7 +4,7 @@
 <head>
 	<title>GroupHub</title>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="viewport" content="width=device-width height=device-height, initial-scale=1.0">
 	<link href="/css/bootstrap.min.css" rel="stylesheet" type="text/css">
 	<link href="/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css">
 	<link href="/css/index.css" rel="stylesheet" type="text/css">
@@ -126,15 +126,14 @@
 				<input type="submit" id="submitBtn" class="btn btn-default" onclick="window.location.href = '/';" value="Back" style="position: absolute;
                                        width: 86px;
                                        height: 35px;
-                                       left: 20px;
+                                       left: 35px;
                                        top: 230px;background: #BADFFF;
                                        border: 1px solid #0A47A2;
-                                       box-sizing: border-box;"></input>				
-			<form method="POST" action="" id="signBtn">			
-				<h5 style="position: absolute;
-					left: 12%;
-					right: 49.87%;
-					top: 46.33%;
+                                       box-sizing: border-box;"></input>	
+				<h5 source media = "max-width: 400px; max-height:617px"style="position: absolute;
+					left: 15%;
+					right: 30.87%;
+					top: 44.33%;
 					bottom: 55.92%;
 
 					font-family: 'Sniglet Bold', arial;
@@ -143,7 +142,8 @@
 					font-size: 18px;
 					line-height: 22px;
 
-					color: #000000;">Enter your name: </h5>
+					color: #000000;">Enter your name: </h5>                                       			
+			<form method="POST" action="" id="signBtn">			
 				<input type="text" id="sign_name" placeholder="Preferred Name" style="position: absolute;
 					   width: 288px;
 					   height: 36px;
